# mainproject

./: pyproject.toml
mainproject/: asgi.py  settings.py  urls.py  wsgi.py
